--- a/style.css
+++ b/style.css
@@ -13,10 +13,12 @@
     --active : rgb(111, 164, 248);
     --search : rgb(48, 49, 53);
     --footer : rgb(23, 23, 23);
+    font-size: 10px;
 }
 
 body{
     background-color: var(--grey);
+    font-size: 1rem;
 }
 
 
@@ -30,6 +32,7 @@ body{
     padding: 5px;
     color: var(--textColor);
     margin-top: 10px;
+    font-size: 1rem;
 }
 
 .nav-left{
@@ -42,14 +45,14 @@ body{
 }
 
 .nav-icon{
-    padding: 1px;
+    padding: 3px;
     cursor: pointer;
 }
 
 .nav-icon > div{
     background-color: var(--textColor);
-    height: 3px;
-    width: 22px;
+    height: 2px;
+    width: 2rem;
     margin-bottom: 3px;
     cursor: pointer;
 }
@@ -68,11 +71,11 @@ body{
 
 .active-border{
     display: block;
-    height: 10px;
-    width: 50px;
+    height: 1rem;
+    width: 4rem;
     background-color: transparent;
     position: absolute;
-    top: 30px;
+    top: 2rem;
     left : -7px;
     border-bottom: 2px solid var(--active);
 }
@@ -88,7 +91,7 @@ body{
 
 .circle-icon{
     flex: 1;
-    height: 30px;
+    height: 40px;
     width: 30px;
     background-color: transparent;
 }
@@ -103,15 +106,15 @@ body{
     background-color: var(--white);
     margin-bottom: 3px;
     border-radius: 100%;
-    margin-right: 2px;
-    width: 5px;
-    height: 5px;
+    margin-right: -15px;
+    width: 3px;
+    height: 3px;
 }
 
 .account{
     background-color: var(--white);
-    height: 30px;
-    width: 30px;
+    height: 2rem;
+    width: 2rem;
     border-radius: 100%;
 }
 
@@ -126,7 +129,7 @@ body{
     margin-top: 20px;
     align-items: center;
     text-align: center;
-    margin-bottom: 20vh;
+    height: 70vh;
 }
 
 
@@ -171,7 +174,8 @@ body{
 }
 
 .bi-person-fill{
-    font-size: 25px;
+    font-size: 1.5rem;
+    margin-top: 3px;
     margin-left: 2px;
 }
 
@@ -192,6 +196,7 @@ body{
 
 .main .language .languages p{
     margin-right: 15px;
+    font-size: 1rem;
 }
 
 /* FOOTER */
