--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@
 body{
     background-color: var(--grey);
     font-size: 1rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 
@@ -41,12 +42,14 @@ body{
 
 .nav-left > div{
     display: inline-block;
-    margin-right: 25px;
+    
 }
 
 .nav-icon{
-    padding: 3px;
+    padding: 1px;
     cursor: pointer;
+    margin-right: 1.5rem;
+    margin-left: 1rem;
 }
 
 .nav-icon > div{
@@ -61,6 +64,8 @@ body{
     display: inline-block;
     margin-right: 15px;
     cursor: pointer;
+    
+    font-size: 1.3rem;
 }
 
 .active {
@@ -86,36 +91,40 @@ body{
 
 .nav-right > div{
     display: inline-block;
-    margin-left: 25px;
+    
 }
 
 .circle-icon{
     flex: 1;
-    height: 40px;
-    width: 30px;
+    height: 30px;
+    width: 20px;
     background-color: transparent;
 }
 .icon{
        display: grid;
     grid-template-columns: auto auto auto;
-    padding: 3px;
     /* display: flex;
     flex-direction: row; */
+
 }
+
 .icon > div{
     background-color: var(--white);
     margin-bottom: 3px;
     border-radius: 100%;
-    margin-right: -15px;
+    font-weight: bold;
     width: 3px;
     height: 3px;
 }
 
 .account{
     background-color: var(--white);
-    height: 2rem;
-    width: 2rem;
+    height: 2.6rem;
+    width: 2.6rem;
     border-radius: 100%;
+    margin-left: 2rem;
+    margin-right: 1rem;
+    margin-top: -0.3rem;
 }
 
 .bi-person-fill{
@@ -134,8 +143,8 @@ body{
 
 
 .main .logo img{
-    max-height: 50px;
-    margin-bottom: 10px;
+    max-height: 60px;
+    margin-bottom: 1.5rem;
 }
 
 .search{
@@ -174,18 +183,19 @@ body{
 }
 
 .bi-person-fill{
-    font-size: 1.5rem;
-    margin-top: 3px;
-    margin-left: 2px;
+    font-size: 2.2rem;
+    margin-top: 1px;
+    margin-left: 1.2px;
 }
 
 .main .language{
     color: var(--textColor);
 }
 
-.main .language h4 {
+.main .language h3 {
+    font-size: 1.5rem;
     font-weight: 100;
-    margin-bottom: 5px;
+    margin-bottom: 1rem;
 } 
 
 .main .language .languages{
@@ -196,7 +206,7 @@ body{
 
 .main .language .languages p{
     margin-right: 15px;
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 
 /* FOOTER */
@@ -210,10 +220,12 @@ footer hr{
     height: 1px;
     background-color: var(--textColor);
     border: none;
+    margin-bottom: 2rem;
 }
 
-.footer h4{
+.footer h3{
     padding: 10px;
+    margin-bottom: 0.5rem;
 }
 
 .footer-text{
@@ -221,6 +233,8 @@ footer hr{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    font-size: 1.3rem;
+    margin-top: -1rem;
 }
 
 .footer-text ul{
@@ -236,6 +250,7 @@ footer hr{
 .footer-text ul li a{
     text-decoration: none;
     color: var(--textColor);
+   
 }
 .theme{
     cursor: pointer;
