--- a/google.css
+++ b/google.css
@@ -13,16 +13,16 @@ a{
     --grey : rgb(32, 33, 37);
     --white : rgb(255, 255, 255);
     --black : rgb(0, 0, 0) ;
-    --textColor : rgb(129, 129, 129);
-    --active : rgb(111, 164, 248);
+    --textColor : #707579;
+    --active : #1458d5;
     --search : rgb(48, 49, 53);
-    --footer : rgb(23, 23, 23);
-    --googleText : rgb(189, 192, 197);
+    --footer : #f2f2f2;
+    --googleText : #848889;
     font-size: 10px;
 }
 
 body{
-    background-color: var(--grey);
+    background-color: var(--white);
     font-size: 1rem;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     overflow-x: hidden;
@@ -60,7 +60,7 @@ body{
 }
 
 .nav-icon > div{
-    background-color: var(--textColor);
+    background-color: #707579;
     height: 2px;
     width: 2rem;
     margin-bottom: 3px;
@@ -115,7 +115,7 @@ body{
 }
 
 .icon > div{
-    background-color: var(--white);
+    background-color:#707579;
     margin-bottom: 3px;
     border-radius: 100%;
     font-weight: bold;
@@ -148,7 +148,7 @@ body{
     left: 0;
     height: 100vh;
     width: 60vw;
-    background-color: var(--grey);
+    background-color: var(--white);
     z-index: 1;
     padding: 2rem;
     color: var(--googleText);
@@ -216,7 +216,7 @@ body{
 .main input {
     display: inline-block;
     width: 90vw;
-    background-color: var(--search);
+    background-color: var(--white);
     border: 1px solid var(--textColor);
     border-radius: 20px;
     padding: 10px;
