--- a/google.css
+++ b/google.css
@@ -206,6 +206,7 @@ body{
 .main .logo img{
     max-height: 60px;
     margin-bottom: 1.5rem;
+    margin-top: 2rem;
 }
 
 .search{
@@ -221,6 +222,7 @@ body{
     border-radius: 20px;
     padding: 10px;
     position: relative;
+    margin-bottom: 1rem;
 }
 
 .bi{
