--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body{
     top: 0;
     left: 0;
     height: 100vh;
-    width: 60vw;
+    width: 75vw;
     background-color: var(--grey);
     z-index: 1;
     padding: 2rem;
@@ -206,6 +206,7 @@ body{
 .main .logo img{
     max-height: 60px;
     margin-bottom: 1.5rem;
+    margin-top: 2rem;
 }
 
 .search{
@@ -221,6 +222,7 @@ body{
     border-radius: 20px;
     padding: 10px;
     position: relative;
+    margin-bottom: 1rem;
 }
 
 .bi{
